Revolutio/kubernetes_config_uat/production-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: uat
  labels:
    app: revolutio
