Revolutio/kubernetes_config_uat/rqscheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: rqscheduler
  namespace: uat
  name: rqscheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      service: rqscheduler
  template:
    metadata:
      labels:
        service: rqscheduler
    spec:
      containers:
      - args:
        - /start
        image: revolutiodev.azurecr.io/revolutio_kubernetes/rqscheduler:3457
        name: rqscheduler
        ports:
          - name: rqscheduler
            containerPort: 8899
        resources: {}
        volumeMounts:
          - mountPath: /opt/revolutio/static
            name: static-azurefile
          - mountPath: /opt/revolutio/kore_investment/templates/user_defined_template
            name: templates-azurefile
          - mountPath: /opt/revolutio/Platform_Configs
            name: platformconfig-azurefile
      restartPolicy: Always
      volumes:
        - name: static-azurefile
          persistentVolumeClaim:
            claimName: static-azurefile
        - name: templates-azurefile
          persistentVolumeClaim:
            claimName: templates-azurefile
        - name: platformconfig-azurefile
          persistentVolumeClaim:
            claimName: platformconfig-azurefile
