Revolutio/kubernetes_config_uat/rqworker-data-upload-0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: worker-data-upload-0
  namespace: uat
  name: worker-data-upload-0
spec:
  replicas: 2
  selector:
    matchLabels:
      service: worker-data-upload-0
  template:
    metadata:
      labels:
        service: worker-data-upload-0
    spec:
      containers:
      - args:
        - /rqworker/start-data-upload-0
        image: revolutiodev.azurecr.io/revolutio_kubernetes/worker:20230112.1
        name: worker-data-upload-0
        volumeMounts:
          - mountPath: /opt/revolutio/static
            name: static-azurefile
          - mountPath: /opt/revolutio/kore_investment/templates/user_defined_template
            name: templates-azurefile
          - mountPath: /opt/revolutio/Platform_Configs
            name: platformconfig-azurefile
      restartPolicy: Always
      volumes:
        - name: static-azurefile
          persistentVolumeClaim:
            claimName: static-azurefile
        - name: templates-azurefile
          persistentVolumeClaim:
            claimName: templates-azurefile
        - name: platformconfig-azurefile
          persistentVolumeClaim:
            claimName: platformconfig-azurefile
