Revolutio/kubernetes_config_uat/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: django
  namespace: uat
  name: django
spec:
  replicas: 2
  selector:
    matchLabels:
      service: django
  template:
    metadata:
      labels:
        service: django
    spec:
      containers:
      - args:
        - /Installation_ref/scripts/start
        image: revolutiodev.azurecr.io/revolutio_kubernetes/revolutio:3947
        name: django
        terminationMessagePath: "/tmp/django-log"
        ports:
          - name: uvicorn
            containerPort: 5000
        volumeMounts:
          - mountPath: /opt/revolutio/static
            name: static-azurefile
          - mountPath: /opt/revolutio/kore_investment/templates/user_defined_template
            name: templates-azurefile
          - mountPath: /opt/revolutio/Platform_Configs
            name: platformconfig-azurefile
          - mountPath: /opt/revolutio/kore_investment/media
            name: media-azurefile1
          - mountPath: /opt/revolutio/Computation_Temp_Storage
            name: computation-storage-azurefile
        livenessProbe:
          httpGet:
            path: /healthy
            port: uvicorn
          initialDelaySeconds: 240
          periodSeconds: 120
          timeoutSeconds: 15
          failureThreshold: 4
        readinessProbe:
          httpGet:
            path: /readiness
            port: uvicorn
          initialDelaySeconds: 240
          periodSeconds: 120
          timeoutSeconds: 15
          failureThreshold: 4
      restartPolicy: Always
      volumes:
        - name: static-azurefile
          persistentVolumeClaim:
            claimName: static-azurefile
        - name: templates-azurefile
          persistentVolumeClaim:
            claimName: templates-azurefile
        - name: platformconfig-azurefile
          persistentVolumeClaim:
            claimName: platformconfig-azurefile
        - name: media-azurefile1
          persistentVolumeClaim:
            claimName: media-azurefile1
        - name: computation-storage-azurefile
          persistentVolumeClaim:
            claimName: computation-storage-azurefile
---
apiVersion: v1
kind: Service
metadata:
  namespace: uat
  name: django
  labels:
    service: django
spec:
  ports:
  - port: 80
    targetPort: 5000
    name: http
  selector:
    service: django
