Revolutio/kubernetes_config_uat/postgres-ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres-service
  namespace: uat
subsets:
  - addresses:
      - ip: 13.71.50.113
    ports:
      - port: 31946
