Revolutio/kubernetes_config_uat/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: postgres
  namespace: uat
  name: postgres
spec:
  selector:
    matchLabels:
      service: postgres
  serviceName: "postgres"
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
      - envFrom:
          - configMapRef:
              name: envs-production-postgres
          - secretRef:
              name: secrets-production-postgres
        image: revolutiodev.azurecr.io/revolutio_kubernetes/postgres:3344
        name: postgres
        ports:
          - containerPort: 5432
            name: postgredb
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-data
          subPath: postgres
        - mountPath: /backups
          name: postgresql-backups
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: postgresql-data
      - name: postgresql-backups
        persistentVolumeClaim:
          claimName: postgresql-backups
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: postgres
  namespace: uat
  name: postgres
spec:
  type: NodePort
  ports:
  - name: "5432"
    port: 5432
  selector:
    service: postgres
status:
  loadBalancer: {}
