Revolutio/kubernetes_config_uat/redis-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis-scheduler
  namespace: uat
  name: redis-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis-scheduler
  strategy: {}
  template:
    metadata:
      labels:
        service: redis-scheduler
    spec:
      containers:
      - image: revolutiodev.azurecr.io/revolutio_kubernetes/redis:3444
        name: redis-scheduler
      restartPolicy: Always
      volumes: null
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis-scheduler
  namespace: uat
  name: redis-scheduler
spec:
  ports:
  - name: "6378"
    protocol: TCP
    port: 6379
  selector:
    service: redis-scheduler
